<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="catUbicacion"
        android:title="@string/ubicacion">

        <ListPreference
            android:key="prefUbInicio"
            android:title="@string/ubIni"
            android:entries="@array/listaUbIni"
            android:entryValues="@array/listaValUbIni" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="catBusqueda"
        android:title="@string/busqueda">

        <EditTextPreference
            android:dialogTitle="@string/tituloDialogRadio"
            android:key="prefRadio"
            android:numeric="decimal"
            android:defaultValue="10"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:singleLineTitle="true"
            android:title="@string/radio" />

    </PreferenceCategory>

</PreferenceScreen>