<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hlc.com.monumentosdeespaa.Activitys.AyudaActivity">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/ayuda"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
        android:shrinkColumns="*">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dip">

            <ImageView
                android:id="@+id/imageViewVista"
                android:layout_width="50dip"
                android:background="@color/colorPrimary"
                app:srcCompat="@drawable/ic_satelite" />

            <TextView
                android:id="@+id/textViewVista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:text="@string/botonVista" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dip">

            <ImageView
                android:id="@+id/imageViewUbicacion"
                android:layout_width="50dip"
                app:srcCompat="@drawable/ic_ver_mapa" />

            <TextView
                android:id="@+id/textViewUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:text="@string/botonUbicacion" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dip">

            <ImageView
                android:id="@+id/imageViewMarcador"
                android:layout_width="60dip"
                android:layout_height="50dip"
                app:srcCompat="@drawable/marker" />

            <TextView
                android:id="@+id/textViewMarcador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:text="@string/marcador" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>
